# SystemMonitorDashboard

./: CMakeLists.txt  README.md
qml/: Dashboard.qml  Graph.qml  ThemeSwitcher.qml  main.qml
src/: SystemStatsProvider.cpp  SystemStatsProvider.h  main.cpp
src/utils/: SysInfo.cpp
